\name{NEWS}
\title{NEWS file for the survival package}
\section{Changes in version 3.8-2}{
  \itemize{
    \item Round 2 of updates, to pass reverse dependency checks. In
    3.8-1 I had made a silly copy-paste mistake in the update to
    survfit, and also added a new test for my changes (doublecolon.R).
    Of course, the only check that I forgot to include in the
    doublecolon file was for ... survfit (coxph, survdiff, survreg,
    survcheck, and concordance were all there).
}}
\section{Changes in version 3.8-1}{
  \itemize{
    \item Changes needed to pass reverse dependency checks, largely
    tightening things up wrt to the formula fix. In summary, the
    survival package routines now ensure that anything in a formula that
    is a part of the package, is found in the package first.  There is
    no need for things like coxph(survival::Surv(time, status) ~ ph.ecog
    + survival::strata(inst), data=lung), in fact you should not do
    this. Using survival::coxph rather than coxph is a completely
    different question, these updates have no bearing on that, only on
    functions within a formula.  Note that prior to this update using
    survival::strata(inst) above would give the wrong answer; because ::
    mucks up formula processing the term would not be recognized as a
    stratum, and the resulting fit equivalent to using factor(inst).
}}

\section{Changes in version 3.8-0}{
  \itemize{
    \item Survival curves which used the id option, for a coxph fit with
    time dependent coefficients, would have too small a std error after
    the transition. Github issue 282
    \item Error in the robust variance in survreg, when there were case
    weights. (Forgot the weighted=TRUE argument to an internal resid
    call.) Github issue 287
    \item Fix an oversight in anova.coxph. A comparison of a stratified
    to an unstratified model is not valid; it now checks for this and
    issues an error.  Also, very long variable names would crash anova.